--- a/posts/测试范例二.md
+++ b/posts/测试范例二.md
@@ -1,32 +1,31 @@
-# 一级標題 post2
+#  基于Git存储的CMS的设计与实现
 
-## 二级標題
+## 计算机科学与网络工程学院
 
 段落以空白行分隔。
 
 行末兩個空格  産生斷行。
 
-文本屬性：*斜體*、
-**粗體**、`等寬字型Monospace`。
+文本属性：*斜体*、
+**粗体**、`等宽字型Monospace`。
 
-水平線：
+水平线：
 
 ---
-
+<!--more-->
 列表：
 
-  * 張三
-  * 李四
-  * 王二
+  * 软件工程
+  * 计算机科学与技术
+  * 网络工程
 
-編號列表：
+编号列表：
 
-  1. 不論
-  2. 三七
-  3. 二十一
+  1. 第一
+  2. 第二
+  3. 第三
 
 
-
-> Markdown使用電郵用字元「>」來引用。
+> Markdown使用「>」来引用邮箱。
 
 行間<abbr title="Hypertext Markup Language">HTML</abbr>亦受支援。
